Small text edits and style tweaks

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -27,14 +27,7 @@
 </div>
 </section>
 
-<!--
-  <header class="site-header">
-    <div class="header-inner">
-      <h1 class="site-title">Scroll The Future: The Rise of the AI Microsite</h1>
-        <button class="toc-toggle" id="toc-toggle">Contents</button>
-      </div>
-  </header>
--->
+<button id="toc-toggle" class="toc-toggle-floating">Contents</button>
 
   <div class="site-container">
     <nav class="site-toc">
